@@ -13,22 +13,26 @@ public class HabrCareerParse {
     private static final String SOURCE_LINK = "http://career.habr.com";
     public static final String PREFIX = "/vacancies?page=";
     public static final String SUFFIX = "&q=Java%20developer&type=all";
+    public static final int PAGES = 5;
 
     public static void main(String[] args) throws IOException {
         int pageNumber = 1;
-        String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-        Connection connection = Jsoup.connect(fullLink);
-        Document document = connection.get();
-        Elements rows = document.select(".vacancy-card__inner");
-        rows.forEach(row -> {
-            Element titleElement = row.select(".vacancy-card__title").first();
-            Element titleDate = row.select(".vacancy-card__date").first();
-            Element linkElement = titleElement.child(0);
-            Element date = titleDate.child(0);
-            String vacancyName = titleElement.text();
-            String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
-            System.out.printf("%s %s %s%n", vacancyName,
-                    new HabrCareerDateTimeParser().parse(date.attr("datetime")), link);
-        });
+        while (pageNumber <= PAGES) {
+            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
+            Connection connection = Jsoup.connect(fullLink);
+            Document document = connection.get();
+            Elements rows = document.select(".vacancy-card__inner");
+            rows.forEach(row -> {
+                Element titleElement = row.select(".vacancy-card__title").first();
+                Element titleDate = row.select(".vacancy-card__date").first();
+                Element linkElement = titleElement.child(0);
+                Element date = titleDate.child(0);
+                String vacancyName = titleElement.text();
+                String link = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
+                System.out.printf("%s %s %s%n", vacancyName,
+                        new HabrCareerDateTimeParser().parse(date.attr("datetime")), link);
+            });
+            pageNumber++;
+        }
     }
 }
